--- a/css/app.css
+++ b/css/app.css
@@ -1,60 +1,37 @@
-body{
-    
-    background: lightsteelblue;
-    
-}
-.orbit{
-    background: url(../img/g-20.jpg) no-repeat;
-    background-size: 100% 120%;
-    height: 55%;
-    text-align: center;
-    padding-bottom: 30%;
+.begin{
+   text-align: right;
+    color: white;
 }
 
-.top-bar img{
-    border-radius: 40px;
-}
-.orbit ul{
-        padding-top: 5%;
-    font-size: 30px;
-    
-}
-/*
-.top-bar ul{
-    
-}
-*/
-/*
+
+<! -- home -->
 #home{
-    
-    background: 100% 100%;
-    
-    height: auto;
-    text-align: center;
-}
-*/
-
-
-.wrap{
-    width: 100%;
-    margin: 0 auto;
-    
-    text-align: center;
-
-}
-
-
-
-
-#shedule{
-    background: url(../img/onmyagenda.jpg) no-repeat;
+    background-image: url(../img/B20%20Turkey.jpg) no-repeat;
     background-size: 100% 100%;
-    margin: 0 auto;
-    text-align: center;
-    margin-bottom: 3%;
-    padding-bottom: 20%;
-}
-#shedule a{
-    
+    width: 100%
+        height: 1080px;
 }
 
+body{
+    background-image: url(../img/G20-2015-COVER-725x1024.jpg);
+}
+
+select{
+    width: 10%
+}
+
+.country{
+        text-align: center;
+    margin-top: 2%;
+    font-size: 40px;
+    color: lightskyblue;
+}
+
+.about{
+        margin-bottom: 1%;
+    padding-bottom: 25%;
+    background-color: lightsteelblue;
+    opacity: 0.9;
+    text-align: center;
+    font-size: xx-large;
+}
