--- a/css/app.css
+++ b/css/app.css
@@ -29,9 +29,14 @@ select{
 
 .about{
         margin-bottom: 1%;
-    padding-bottom: 25%;
+    padding-bottom: 10%;
     background-color: lightsteelblue;
     opacity: 0.9;
     text-align: center;
-    font-size: xx-large;
+}
+
+label{
+    opacity: 0.7;
+    color: lightskyblue;
+    text-align: center;
 }
