added dtyles to row 1

--- a/css/app.css
+++ b/css/app.css
@@ -11,3 +11,12 @@ select {
     width: 314px;
     height: 37px;
 }
+
+{
+    padding-top: 49px;
+    font-size: 40px;
+
+}
+#twitter {
+    padding-top: 167px;
+}
