--- a/css/app.css
+++ b/css/app.css
@@ -5,29 +5,33 @@
 
 
 <! -- home -->
-#home{
-    background-image: url(../img/B20%20Turkey.jpg) no-repeat;
-    background-size: 100% 100%;
-    width: 100%
-        height: 1080px;
+
+#index{
+
+    background: url(../img/bank.jpg) no-repeat;
+    background-size: cover;
+    height: 55%;
+    text-align: center;
+    color: white;
 }
 
+.home{
+    font-size: 20px;
+}
+
+
 body{
-    background-image: url(../img/G20-2015-COVER-725x1024.jpg);
+    background:#427B7F ;
 }
 
 select{
     width: 10%
 }
 
-.country{
-        text-align: center;
-    margin-top: 2%;
-    font-size: 40px;
-    color: lightskyblue;
-}
 
 .about{
+    margin-top: 29%;
+    background-size: contain;
         margin-bottom: 1%;
     padding-bottom: 10%;
     background-color: lightsteelblue;
@@ -37,6 +41,7 @@ select{
 
 label{
     opacity: 0.7;
-    color: lightskyblue;
+    color: #7FF6FF;
     text-align: center;
+    font-size: 15px;
 }
