--- a/G20-summit final/css/app.css
+++ b/G20-summit final/css/app.css
@@ -1,5 +1,14 @@
 /*General styles*/
-
+h6{
+       font-size: 11px;
+    line-height: 20px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #909090;
+    margin: 0 0 5px;
+    font-weight: 600;
+} 
+}
 
 /*end of general styles*/
 
