--- a/G20-summit final/css/app.css
+++ b/G20-summit final/css/app.css
@@ -1,14 +1,5 @@
 /*General styles*/
-h6{
-       font-size: 11px;
-    line-height: 20px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #909090;
-    margin: 0 0 5px;
-    font-weight: 600;
-} 
-}
+
 
 /*end of general styles*/
 
@@ -66,3 +57,58 @@ img{
         padding: 5%;
     font-size: 1.5em;
 }
+
+
+h6{
+       font-size: 11px;
+    line-height: 20px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #909090;
+    margin: 0 0 5px;
+    font-weight: 600;
+    vertical-align: baseline;
+}
+
+.mobile_only, #mobile_nav {
+    display: none;
+}
+
+
+
+/*
+.schedule section {
+    background-image: none;
+}
+
+
+
+section {
+    margin: 0;
+    padding: 80px 0 75px;
+    background: #fff;
+}
+
+.day a.sched_workshops_morning, .day a.sched_practical_morning, .day a.sched_conference_morning {
+    height: 223px;
+    top: 25px;
+}
+.day a {
+    display: block;
+    background: #151414;
+    color: #fff;
+    position: absolute;
+    bottom: 0;
+    left: 2px;
+    right: 2px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    opacity: 0.8;
+    border: 1px solid #000;
+}
+a {
+    color: #c42f37;
+    cursor: pointer;
+    text-decoration: none;
+}*/
